@startuml  
title Diagrama de Classes - Vought Tech

skinparam classAttributeIconSize 0
skinparam shadowing false


class Usuario {
  +id_usuario: integer
  +nome: varchar(100)
  +email: varchar(100)
  +cpf: varchar(11)
  +senha: varchar(255)
  +tipo: varchar(10)
  +criado_em: timestamp
}

class Categoria {
  +id_categoria: integer
  +nome: varchar(50)
}

class Endereco {
  +id_endereco: integer
  +id_usuario: integer
  +rua: varchar(120)
  +numero: varchar(20)
  +bairro: varchar(80)
  +cidade: varchar(80)
  +estado: varchar(2)
  +cep: varchar(9)
}

class Produto {
  +id_produto: integer
  +id_categoria: integer
  +nome: varchar(100)
  +descricao: text
  +preco: decimal(10,2)
  +estoque: int
  +imagem: varchar(255)
}

class Carrinho {
  +id_carrinho: integer
  +id_cliente: integer
  +id_produto: integer
  +quantidade: int
}

class Pedido {
  +id_pedido: integer
  +id_cliente: integer
  +data_pedido: timestamp
  +status: varchar(20)
  +valor_total: decimal(10,2)
  +endereco_id: integer
}

class ItemPedido {
  +id_item: integer
  +id_pedido: integer
  +id_produto: integer
  +quantidade: int
  +preco_unitario: decimal(10,2)
}

class AuthFailure {
  +email: varchar(100)
  +tentativas: int
  +bloqueado_ate: timestamp
}

class TokenReset {
  +id_token: integer
  +id_usuario: integer
  +token_hash: text
  +data_expiracao: timestamp
  +usado: boolean
}

' Relações (baseadas nas chaves estrangeiras)
Usuario "1" -- "0..*" Endereco : possui
Categoria "1" -- "0..*" Produto : contém
Usuario "1" -- "0..*" Carrinho : possui
Produto "1" -- "0..*" Carrinho : referenciado_em

Pedido "1" -- "0..*" ItemPedido : contém_itens
Produto "1" -- "0..*" ItemPedido : referenciado_em
Usuario "1" -- "0..*" Pedido : realiza
Pedido "0..1" -- "0..*" Endereco : endereco_entrega

' Tabelas auxiliares
Usuario "1" -- "0..1" TokenReset : possuiTokenReset

@enduml
